# cpp_serializers_benchmark

bitsery/: CMakeLists.txt
boost/: CMakeLists.txt
flatbuffers/: CMakeLists.txt
yas/: CMakeLists.txt
zpp/: CMakeLists.txt
